--- a/offerings.html
+++ b/offerings.html
@@ -33,7 +33,7 @@
       <section id="banner" class="offerings">
         <div class="inner inside">
           <header>
-            <h2>What do we offer?</h2>
+            <h2>Choose your experience</h2>
           </header>
         </div>
       </section>
@@ -42,8 +42,8 @@
       <article id="main">
         <header class="special container">
           <h2>
-            Our unique offerings cater to individuals, couples, families, and groups looking for a one-of-a-kind experience. Whether it's a leisurely cruise to
-            unwind and take in the views or a lively celebration with friends, our hot tugs provide the perfect setting.
+            Our unique experiences cater to individuals, couples, families, and groups looking for a one-of-a-kind experience. Whether it's a leisurely cruise
+            to unwind and take in the views or a lively celebration with friends, our hot tugs provide the perfect setting.
           </h2>
         </header>
 
@@ -101,7 +101,7 @@
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="guided.html" class="image featured"><img src="images/adventures.jpg" alt="" /></a>
+                <a href="guided.html" class="image featured"><img src="images/grassi-lakes.jpg" alt="" /></a>
                 <header>
                   <h3><a href="guided.html">Guided Adventures</a></h3>
                 </header>
