--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </section>
 
         <!-- One -->
-        <section class="wrapper style2 container special-alt">
+        <!-- <section class="wrapper style2 container special-alt">
           <div class="row gtr-50">
             <div class="col-8 col-12-narrower">
               <header>
@@ -145,7 +145,7 @@
               </ul>
             </div>
           </div>
-        </section>
+        </section> -->
 
         <!-- Two -->
         <section class="wrapper style1 container special">
