--- a/offerings.html
+++ b/offerings.html
@@ -13,7 +13,6 @@
         <h1 id="logo"><a href="index.html">Jacuzzi Journeys</a></h1>
         <nav id="nav">
           <ul>
-            <li><a href="index.html">Home</a></li>
             <li class="submenu current">
               <a href="offerings.html">Experiences</a>
               <ul>
@@ -33,7 +32,7 @@
       <section id="banner" class="offerings">
         <div class="inner inside">
           <header>
-            <h2>Choose your experience</h2>
+            <h2>Experiences</h2>
           </header>
         </div>
       </section>
