--- a/offerings.html
+++ b/offerings.html
@@ -135,7 +135,7 @@
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="contact.html" class="image featured"><img src="images/equipment.png" alt="" /></a>
+                <a href="contact.html" class="image featured"><img src="images/equipment.jpg" alt="" /></a>
                 <header style="margin-bottom: 50px">
                   <h3><a href="contact.html">Equipment Rental and Sales</a></h3>
                 </header>
