--- a/index.html
+++ b/index.html
@@ -152,38 +152,29 @@
           <div class="row">
             <div class="col-4 col-12-narrower">
               <section>
-                <span class="icon solid featured fa-check"></span>
+                <img src="images/navigate.svg" class="icon featured" alt="" />
                 <header>
-                  <h3>This is Something</h3>
+                  <h3>Easy navigation</h3>
                 </header>
-                <p>
-                  Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis
-                  turpis. Integer ut fermentum.
-                </p>
+                <p>Captain your own boat, powered by an electric motor.</p>
               </section>
             </div>
             <div class="col-4 col-12-narrower">
               <section>
-                <span class="icon solid featured fa-check"></span>
+                <img src="images/weather.svg" class="icon featured" alt="" />
                 <header>
-                  <h3>Also Something</h3>
+                  <h3>All-weather fun</h3>
                 </header>
-                <p>
-                  Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis
-                  turpis. Integer ut fermentum.
-                </p>
+                <p>Stay cozy in a full-depth, full-size hot tub you can sink into.</p>
               </section>
             </div>
             <div class="col-4 col-12-narrower">
               <section>
-                <span class="icon solid featured fa-check"></span>
+                <img src="images/temp.svg" class="icon featured" alt="" />
                 <header>
-                  <h3>Probably Something</h3>
+                  <h3>Wood-fired warmth</h3>
                 </header>
-                <p>
-                  Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis
-                  turpis. Integer ut fermentum.
-                </p>
+                <p>Adjust on-board hot tub heat, fueled by clean-burning recycled wood.</p>
               </section>
             </div>
           </div>
@@ -198,7 +189,7 @@
         </header>
         <footer>
           <ul class="buttons">
-            <li><a href="package-builder.html" class="button primary">Book now</a></li>
+            <li><a href="experiences.html" class="button primary">Book now</a></li>
             <li><a href="contact.html" class="button">Contact us</a></li>
           </ul>
         </footer>
