--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@
 
         <!-- Two -->
         <section class="wrapper style1 container special">
+          <header class="major">
+            <h2>What to <strong>expect</strong></h2>
+          </header>
           <div class="row">
             <div class="col-4 col-12-narrower">
               <section>
@@ -175,6 +178,35 @@
                   <h3>Wood-fired warmth</h3>
                 </header>
                 <p>Adjust on-board hot tub heat, fueled by clean-burning recycled wood.</p>
+              </section>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-4 col-12-narrower">
+              <section>
+                <img src="images/views.svg" class="icon featured" alt="" />
+                <header>
+                  <h3>Rocky mountain views</h3>
+                </header>
+                <p>Take in the rocky mountains from water level to skyline.</p>
+              </section>
+            </div>
+            <div class="col-4 col-12-narrower">
+              <section>
+                <img src="images/swim.svg" class="icon featured" alt="" />
+                <header>
+                  <h3>Take the plunge</h3>
+                </header>
+                <p>Jump into the river, or the lake. Climb the ladder to get back on board.</p>
+              </section>
+            </div>
+            <div class="col-4 col-12-narrower">
+              <section>
+                <img src="images/boats.svg" class="icon featured" alt="" />
+                <header>
+                  <h3>One, two, or three boats</h3>
+                </header>
+                <p>Whether you need a solo boat for date night, or three boats for a party, we can make it happen.</p>
               </section>
             </div>
           </div>
