--- a/aboutus.html
+++ b/aboutus.html
@@ -29,7 +29,7 @@
           </ul>
         </nav>
       </header>
-      <section id="banner">
+      <section id="banner" class="offerings">
         <div class="inner inside">
           <header>
             <h2>About us</h2>
