--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 
       <!-- Main -->
       <article id="main">
-        <header class="special container">
+        <header class="special contact container">
           <span class="icon solid fa-envelope"></span>
           <h2>Get In Touch</h2>
           <p>Use the form below to contact us for more information.</p>
