--- a/experiences.html
+++ b/experiences.html
@@ -140,7 +140,13 @@
           <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="package-builder.html" class="image featured"><img src="images/adventure1.jpg" alt="" /></a>
+                <a href="package-builder.html" class="image featured">
+                  <img src="images/adventure1.jpg" alt="" />
+                  <span class="experience-price">
+                    <span class="from">From</span>
+                    <span class="price"> <span class="currency-symbol">CA$</span>199</span>
+                  </span>
+                </a>
                 <header>
                   <h3><a href="package-builder.html">Romantic Getaways</a></h3>
                 </header>
@@ -152,7 +158,13 @@
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="package-builder.html" class="image featured"><img src="images/adventure2.jpg" alt="" /></a>
+                <a href="package-builder.html" class="image featured"
+                  ><img src="images/adventure2.jpg" alt="" />
+                  <span class="experience-price">
+                    <span class="from">From</span>
+                    <span class="price"> <span class="currency-symbol">CA$</span>199</span>
+                  </span></a
+                >
                 <header>
                   <h3><a href="package-builder.html">Family-Friendly Adventures</a></h3>
                 </header>
@@ -163,7 +175,13 @@
           <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="package-builder.html" class="image featured"><img src="images/adventure3.jpg" alt="" /></a>
+                <a href="package-builder.html" class="image featured"
+                  ><img src="images/adventure3.jpg" alt="" />
+                  <span class="experience-price">
+                    <span class="from">From</span>
+                    <span class="price"> <span class="currency-symbol">CA$</span>199</span>
+                  </span></a
+                >
                 <header>
                   <h3><a href="package-builder.html">Wellness Retreats</a></h3>
                 </header>
@@ -175,7 +193,13 @@
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="package-builder.html" class="image featured"><img src="images/adventure4.jpg" alt="" /></a>
+                <a href="package-builder.html" class="image featured"
+                  ><img src="images/adventure4.jpg" alt="" />
+                  <span class="experience-price">
+                    <span class="from">From</span>
+                    <span class="price"> <span class="currency-symbol">CA$</span>199</span>
+                  </span></a
+                >
                 <header>
                   <h3><a href="package-builder.html">Guided Outdoor Activities</a></h3>
                 </header>
