--- a/offerings.html
+++ b/offerings.html
@@ -50,7 +50,13 @@
           <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="hot-tug.html" class="image featured"><img src="images/hot-tug.png" alt="" /></a>
+                <a href="hot-tug.html" class="experience image featured"
+                  ><img src="images/hot-tug.png" alt="" />
+                  <span class="experience-price">
+                    <span class="from">From</span>
+                    <span class="price"> <span class="currency-symbol">CA$</span>199</span>
+                  </span></a
+                >
                 <header>
                   <h3><a href="hot-tug.html">Hot Tug Experiences</a></h3>
                 </header>
@@ -66,7 +72,13 @@
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="camping.html" class="image featured"><img src="images/camping-retreat.jpg" alt="" /></a>
+                <a href="camping.html" class="experience image featured"
+                  ><img src="images/camping-retreat.jpg" alt="" />
+                  <span class="experience-price">
+                    <span class="from">From</span>
+                    <span class="price"> <span class="currency-symbol">CA$</span>199</span>
+                  </span></a
+                >
                 <header>
                   <h3><a href="camping.html">Camping Retreats</a></h3>
                 </header>
@@ -84,7 +96,13 @@
           <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="tree-tent.html" class="image featured"><img src="images/tent-tree.png" alt="" /></a>
+                <a href="tree-tent.html" class="experience image featured"
+                  ><img src="images/tent-tree.png" alt="" />
+                  <span class="experience-price">
+                    <span class="from">From</span>
+                    <span class="price"> <span class="currency-symbol">CA$</span>199</span>
+                  </span></a
+                >
                 <header>
                   <h3><a href="tree-tent.html">Tree Tent Accommodations</a></h3>
                 </header>
@@ -100,7 +118,13 @@
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="guided.html" class="image featured"><img src="images/grassi-lakes.jpg" alt="" /></a>
+                <a href="guided.html" class="experience image featured"
+                  ><img src="images/grassi-lakes.jpg" alt="" />
+                  <span class="experience-price">
+                    <span class="from">From</span>
+                    <span class="price"> <span class="currency-symbol">CA$</span>199</span>
+                  </span></a
+                >
                 <header>
                   <h3><a href="guided.html">Guided Adventures</a></h3>
                 </header>
@@ -119,7 +143,13 @@
           <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="contact.html" class="image featured"><img src="images/events.jpg" alt="" /></a>
+                <a href="contact.html" class="experience image featured"
+                  ><img src="images/events.jpg" alt="" />
+                  <span class="experience-price">
+                    <span class="from">From</span>
+                    <span class="price"> <span class="currency-symbol">CA$</span>199</span>
+                  </span></a
+                >
                 <header style="margin-bottom: 50px">
                   <h3><a href="contact.html">Event Hosting</a></h3>
                 </header>
@@ -135,7 +165,13 @@
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="contact.html" class="image featured"><img src="images/equipment.jpg" alt="" /></a>
+                <a href="contact.html" class="experience image featured"
+                  ><img src="images/equipment.jpg" alt="" />
+                  <span class="experience-price">
+                    <span class="from">From</span>
+                    <span class="price"> <span class="currency-symbol">CA$</span>199</span>
+                  </span></a
+                >
                 <header style="margin-bottom: 50px">
                   <h3><a href="contact.html">Equipment Rental and Sales</a></h3>
                 </header>
