--- a/index.html
+++ b/index.html
@@ -61,7 +61,12 @@
           <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="hot-tug.html" class="image featured"><img src="images/hot-tug.png" alt="Hot tug experience" /></a>
+                <a href="hot-tug.html" class="experience image featured"
+                  ><img src="images/hot-tug.png" alt="Hot tug experience" /><span class="experience-price">
+                    <span class="from">From</span>
+                    <span class="price"> <span class="currency-symbol">CA$</span>199</span>
+                  </span></a
+                >
                 <header style="margin-bottom: 50px">
                   <h3><a href="hot-tug.html">Hot Tug Experiences</a></h3>
                 </header>
@@ -70,7 +75,12 @@
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="camping.html" class="image featured"><img src="images/camping-retreat.jpg" alt="Camping picture" /></a>
+                <a href="camping.html" class="experience image featured"
+                  ><img src="images/camping-retreat.jpg" alt="Camping picture" /><span class="experience-price">
+                    <span class="from">From</span>
+                    <span class="price"> <span class="currency-symbol">CA$</span>199</span>
+                  </span></a
+                >
                 <header style="margin-bottom: 50px">
                   <h3><a href="camping.html">Camping Retreats</a></h3>
                 </header>
@@ -81,7 +91,12 @@
           <div class="row">
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="tree-tent.html" class="image featured"><img src="images/tent-tree.png" alt="Tent tree Accommodations" /></a>
+                <a href="tree-tent.html" class="experience image featured"
+                  ><img src="images/tent-tree.png" alt="Tent tree Accommodations" /><span class="experience-price">
+                    <span class="from">From</span>
+                    <span class="price"> <span class="currency-symbol">CA$</span>199</span>
+                  </span></a
+                >
                 <header style="margin-bottom: 50px">
                   <h3><a href="tree-tent.html">Tree Tent Accommodations</a></h3>
                 </header>
@@ -90,7 +105,12 @@
             </div>
             <div class="col-6 col-12-narrower">
               <section>
-                <a href="guided.html" class="image featured"><img src="images/grassi-lakes.jpg" alt="Grassi Lakes Hike" /></a>
+                <a href="guided.html" class="experience image featured"
+                  ><img src="images/grassi-lakes.jpg" alt="Grassi Lakes Hike" /><span class="experience-price">
+                    <span class="from">From</span>
+                    <span class="price"> <span class="currency-symbol">CA$</span>199</span>
+                  </span></a
+                >
                 <header style="margin-bottom: 50px">
                   <h3><a href="guided.html">Guided Adventures</a></h3>
                 </header>
