--- a/aboutus.html
+++ b/aboutus.html
@@ -63,6 +63,73 @@
         </footer>
       </section>
 
+      <section class="wrapper style2 container special-alt">
+        <div class="row gtr-50">
+          <div class="col-8 col-12-narrower">
+            <header>
+              <h2>
+                Join us at Jacuzzi Journey for an unforgettable experience where relaxation meets adventure on the water. Get ready to soak, camp, and create
+                lasting memories with us!
+              </h2>
+            </header>
+            <p>
+              Powered by eco-friendly wood-fired heaters, our hot tugs offer a sustainable way to enjoy the water while minimizing our environmental footprint.
+              Safety and comfort are our top priorities, ensuring that every adventure with us is not only memorable but also secure.
+            </p>
+            <footer>
+              <ul class="buttons">
+                <li><a href="#" class="button">Find Out More</a></li>
+              </ul>
+            </footer>
+          </div>
+          <div class="col-4 col-12-narrower imp-narrower">
+            <!-- <ul class="featured-icons">
+              <li>
+                <span class="icon fa-clock"><span class="label">Feature 1</span></span>
+              </li>
+              <li>
+                <span class="icon solid fa-volume-up"><span class="label">Feature 2</span></span>
+              </li>
+              <li>
+                <span class="icon solid fa-laptop"><span class="label">Feature 3</span></span>
+              </li>
+              <li>
+                <span class="icon solid fa-inbox"><span class="label">Feature 4</span></span>
+              </li>
+              <li>
+                <span class="icon solid fa-lock"><span class="label">Feature 5</span></span>
+              </li>
+              <li>
+                <span class="icon solid fa-cog"><span class="label">Feature 6</span></span>
+              </li>
+            </ul> -->
+          </div>
+        </div>
+      </section>
+
+      <section class="wrapper style4 container">
+        <div class="content">
+          <section>
+            <header>
+              <h2>FREQUENTLY ASKED QUESTIONS</h2>
+            </header>
+            <h4>When can I rent a Hot Tub Boat?</h4>
+            <p>Right now! We are open all year, rain or shine.</p>
+            <h4>How hot is the water in your Hot Tub Boats?</h4>
+            <p>The "Feds" say the hottest, maximum temperature for a hot tub is 104 degrees. So, that’s where we keep it!</p>
+            <h4>Does the hot tub stay hot while boating?</h4>
+            <p>Yes, the Hot Tub Boat is equipped with a small, diesel fired boiler to maintain the temperature of your choice.</p>
+            <h4>Who drives the boat?</h4>
+            <p>You, your friend, your Aunt, your best friend's cousin's girlfriend - doesn't matter to us, as long as they are 18 and above!</p>
+            <h4>Can I bring alcohol during my Hot Tub Boat rental?</h4>
+            <p>
+              Unfortunately, no. We know this may be disappointing, however, please take a moment and look at it from our liability perspective. Besides,
+              haven’t we always been told that drinking and hot tubs don’t mix?
+            </p>
+          </section>
+        </div>
+      </section>
+
       <!-- Footer -->
       <footer id="footer">
         <!-- <ul class="icons">
