--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         </header>
         <footer>
           <ul class="buttons">
-            <li><a href="experiences.html" class="button primary">Book now</a></li>
+            <li><a href="offerings.html" class="button primary">Book now</a></li>
             <li><a href="contact.html" class="button">Contact us</a></li>
           </ul>
         </footer>
