--- a/offerings.html
+++ b/offerings.html
@@ -282,24 +282,18 @@
               <header>
                 <h2>FREQUENTLY ASKED QUESTIONS</h2>
               </header>
-              <h4>Question 1</h4>
+              <h4>When can I rent a Hot Tub Boat?</h4>
+              <p>Right now! We are open all year, rain or shine.</p>
+              <h4>How hot is the water in your Hot Tub Boats?</h4>
+              <p>The "Feds" say the hottest, maximum temperature for a hot tub is 104 degrees. So, that’s where we keep it!</p>
+              <h4>Does the hot tub stay hot while boating?</h4>
+              <p>Yes, the Hot Tub Boat is equipped with a small, diesel fired boiler to maintain the temperature of your choice.</p>
+              <h4>Who drives the boat?</h4>
+              <p>You, your friend, your Aunt, your best friend's cousin's girlfriend - doesn't matter to us, as long as they are 18 and above!</p>
+              <h4>Can I bring alcohol during my Hot Tub Boat rental?</h4>
               <p>
-                Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo.
-                Cras vel neque eros. Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis
-                elementum orci, nec dictum massa. Morbi eu faucibus massa. Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi
-                justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.
-              </p>
-              <h4>Question 2</h4>
-              <p>
-                Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum
-                porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus.
-                Phasellus vitae tortor non est placerat tristique. Sed id sem et massa ornare pellentesque. Maecenas pharetra porta accumsan.
-              </p>
-              <h4>Question 3</h4>
-              <p>
-                In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed
-                sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus, non hendrerit
-                ipsum arcu tristique est.
+                Unfortunately, no. We know this may be disappointing, however, please take a moment and look at it from our liability perspective. Besides,
+                haven’t we always been told that drinking and hot tubs don’t mix?
               </p>
             </section>
           </div>
