--- a/guided.html
+++ b/guided.html
@@ -130,10 +130,44 @@
           </div>
         </section> -->
 
-        <!-- Three -->
         <section class="wrapper style3 container special">
           <header class="major">
             <h2>What to expect</h2>
+          </header>
+
+          <div class="row">
+            <div class="col-6 col-12-narrower">
+              <section>
+                <h3>Pricing</h3>
+                <h5>$199 for 2 hours</h5>
+              </section>
+            </div>
+            <div class="col-6 col-12-narrower">
+              <section>
+                <h3>Availability</h3>
+                <h5>7 days a week, rain or shine</h5>
+              </section>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6 col-12-narrower">
+              <section>
+                <h3>Capacity</h3>
+                <h5>6 people maximum per boat</h5>
+              </section>
+            </div>
+            <div class="col-6 col-12-narrower">
+              <section>
+                <h3>Requirements</h3>
+                <h5>Renter must be 21+ with a valid ID (No boater's license required)</h5>
+              </section>
+            </div>
+          </div>
+        </section>
+
+        <section class="wrapper style3 container special">
+          <header class="major">
+            <h2>Gallery</h2>
           </header>
 
           <div class="row">
