--- a/offerings.html
+++ b/offerings.html
@@ -65,7 +65,7 @@
                   scenic waterways, taking in breathtaking views, and enjoying the company of friends or family.
                 </p>
                 <ul class="buttons">
-                  <li><a href="package-builder.html" class="button">Book now</a></li>
+                  <li><a href="hot-tug.html" class="button">Book now</a></li>
                 </ul>
                 <span></span>
               </section>
@@ -87,7 +87,7 @@
                   providing guests with a chance to reconnect with nature and unwind under the stars.
                 </p>
                 <ul class="buttons">
-                  <li><a href="package-builder.html" class="button">Book now</a></li>
+                  <li><a href="camping.html" class="button">Book now</a></li>
                 </ul>
                 <span></span>
               </section>
@@ -111,7 +111,7 @@
                   allowing guests to sleep amidst the trees while enjoying stunning views and the soothing sounds of nature.
                 </p>
                 <ul class="buttons">
-                  <li><a href="package-builder.html" class="button">Book now</a></li>
+                  <li><a href="tree-tent.html" class="button">Book now</a></li>
                 </ul>
                 <span></span>
               </section>
@@ -134,7 +134,7 @@
                   natural world.
                 </p>
                 <ul class="buttons">
-                  <li><a href="package-builder.html" class="button">Book now</a></li>
+                  <li><a href="guided.html" class="button">Book now</a></li>
                 </ul>
                 <span></span>
               </section>
