--- a/tree-tent.html
+++ b/tree-tent.html
@@ -135,32 +135,53 @@
             <h2>What to expect</h2>
           </header>
 
-          <div class="row">
-            <div class="col-6 col-12-narrower">
-              <section>
-                <h3>Pricing</h3>
-                <h5>$199 for 2 hours</h5>
-              </section>
+          <div class="row align-items-center">
+            <div class="col-4 d-none d-lg-block">
+              <img src="images/hot-tug3.png" alt="Hot tug" />
             </div>
-            <div class="col-6 col-12-narrower">
-              <section>
-                <h3>Availability</h3>
-                <h5>7 days a week, rain or shine</h5>
-              </section>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-6 col-12-narrower">
-              <section>
-                <h3>Capacity</h3>
-                <h5>6 people maximum per boat</h5>
-              </section>
-            </div>
-            <div class="col-6 col-12-narrower">
-              <section>
-                <h3>Requirements</h3>
-                <h5>Renter must be 21+ with a valid ID (No boater's license required)</h5>
-              </section>
+            <div class="col-8 pl-xl-0">
+              <ul class="row list-unstyled expect-items mb-0">
+                <li class="col-6">
+                  <div class="expect-item expect-item--setWidth">
+                    <div class="card-featured position-relative">
+                      <div class="card-featured__contents no-bottom">
+                        <h3>Pricing</h3>
+                        <p class="card-featured__text">$300 for 2 hours</p>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+                <li class="col-6">
+                  <div class="expect-item expect-item--setWidth">
+                    <div class="card-featured position-relative">
+                      <div class="card-featured__contents no-bottom">
+                        <h3>Availability</h3>
+                        <p class="card-featured__text">7 days a week, summer months, rain or shine</p>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+                <li class="col-6">
+                  <div class="expect-item expect-item--setWidth">
+                    <div class="card-featured position-relative">
+                      <div class="card-featured__contents no-bottom">
+                        <h3>Capacity</h3>
+                        <p class="card-featured__text">6 people maximum per boat.</p>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+                <li class="col-6">
+                  <div class="expect-item expect-item--setWidth expect-item--last">
+                    <div class="card-featured position-relative">
+                      <div class="card-featured__contents no-bottom">
+                        <h3>Requirements</h3>
+                        <p class="card-featured__text">Renter must be 18+ with a valid ID (No boater's license required)</p>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+              </ul>
             </div>
           </div>
         </section>
