--- a/aboutus.html
+++ b/aboutus.html
@@ -42,10 +42,12 @@
         <header class="special container">
           <h2>
             At Jacuzzi Journey, our mission is to provide unforgettable outdoor experiences that blend the serenity of nature with the luxury of hot tug and
-            camping relaxation. We are dedicated to creating unique, eco-friendly adventures that rejuvenate the mind, body, and spirit, while ensuring
-            exceptional customer service and a deep respect for the environment. Our goal is to inspire a love for the outdoors and create lasting memories for
-            every guest.
+            camping relaxation.
           </h2>
+          <p>
+            We are dedicated to creating unique, eco-friendly adventures that rejuvenate the mind, body, and spirit, while ensuring exceptional customer service
+            and a deep respect for the environment. Our goal is to inspire a love for the outdoors and create lasting memories for every guest.
+          </p>
         </header>
       </article>
 
