--- a/index.html
+++ b/index.html
@@ -53,6 +53,95 @@
           </p>
         </header>
 
+        <section id="intro" class="wrapper style3 container special">
+          <header class="major">
+            <h2>What is a <strong>hot tug experience</strong>?</h2>
+          </header>
+
+          <div class="row" style="align-items: center">
+            <div class="col-6 col-12-narrower">
+              <p style="margin-bottom: 0">
+                Come explore the Bow Valley on a gorgeous boat, from a cozy hot tub — marveling at Ghost Lake, the Bow River and the rocky mountains. We offer
+                Alberta's premier Hot Tug Boat rental experience, complete with Bluetooth speakers, easy joystick navigation, and plenty of space for food and
+                drinks. We’re here to help you make great memories and celebrate birthdays, anniversaries, and fun times with friends and family.
+              </p>
+            </div>
+            <div class="col-6 col-12-narrower">
+              <img src="images/hot-tug.png" alt="Hot tug experience" style="max-width: 100%" />
+            </div>
+          </div>
+
+          <footer class="major">
+            <ul class="buttons">
+              <li><a href="offerings.html" class="button">Book now</a></li>
+            </ul>
+          </footer>
+        </section>
+
+        <section class="wrapper style1 container special">
+          <header class="major">
+            <h2>What to <strong>expect</strong></h2>
+          </header>
+          <div class="row">
+            <div class="col-4 col-12-narrower">
+              <section>
+                <img src="images/navigate.svg" class="icon featured" alt="" />
+                <header>
+                  <h3>Easy navigation</h3>
+                </header>
+                <p>Captain your own boat, powered by an electric motor.</p>
+              </section>
+            </div>
+            <div class="col-4 col-12-narrower">
+              <section>
+                <img src="images/weather.svg" class="icon featured" alt="" />
+                <header>
+                  <h3>All-weather fun</h3>
+                </header>
+                <p>Stay cozy in a full-depth, full-size hot tub you can sink into.</p>
+              </section>
+            </div>
+            <div class="col-4 col-12-narrower">
+              <section>
+                <img src="images/temp.svg" class="icon featured" alt="" />
+                <header>
+                  <h3>Wood-fired warmth</h3>
+                </header>
+                <p>Adjust on-board hot tub heat, fueled by clean-burning recycled wood.</p>
+              </section>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-4 col-12-narrower">
+              <section>
+                <img src="images/views.svg" class="icon featured" alt="" />
+                <header>
+                  <h3>Rocky mountain views</h3>
+                </header>
+                <p>Take in the rocky mountains from water level to rocky mountain peak.</p>
+              </section>
+            </div>
+            <div class="col-4 col-12-narrower">
+              <section>
+                <img src="images/swim.svg" class="icon featured" alt="" />
+                <header>
+                  <h3>Take the plunge</h3>
+                </header>
+                <p>Jump into the river, or the lake. Climb the ladder to get back on board.</p>
+              </section>
+            </div>
+            <div class="col-4 col-12-narrower">
+              <section>
+                <img src="images/boats.svg" class="icon featured" alt="" />
+                <header>
+                  <h3>One, two, or three boats</h3>
+                </header>
+                <p>Whether you need a solo boat for date night, or three boats for a party, we can make it happen.</p>
+              </section>
+            </div>
+          </div>
+        </section>
+
         <section id="experiences" class="wrapper style3 container special">
           <header class="major">
             <h2>Take a look at our <strong>unique experiences</strong></h2>
@@ -168,69 +257,6 @@
         </section> -->
 
         <!-- Two -->
-        <section class="wrapper style1 container special">
-          <header class="major">
-            <h2>What to <strong>expect</strong></h2>
-          </header>
-          <div class="row">
-            <div class="col-4 col-12-narrower">
-              <section>
-                <img src="images/navigate.svg" class="icon featured" alt="" />
-                <header>
-                  <h3>Easy navigation</h3>
-                </header>
-                <p>Captain your own boat, powered by an electric motor.</p>
-              </section>
-            </div>
-            <div class="col-4 col-12-narrower">
-              <section>
-                <img src="images/weather.svg" class="icon featured" alt="" />
-                <header>
-                  <h3>All-weather fun</h3>
-                </header>
-                <p>Stay cozy in a full-depth, full-size hot tub you can sink into.</p>
-              </section>
-            </div>
-            <div class="col-4 col-12-narrower">
-              <section>
-                <img src="images/temp.svg" class="icon featured" alt="" />
-                <header>
-                  <h3>Wood-fired warmth</h3>
-                </header>
-                <p>Adjust on-board hot tub heat, fueled by clean-burning recycled wood.</p>
-              </section>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-4 col-12-narrower">
-              <section>
-                <img src="images/views.svg" class="icon featured" alt="" />
-                <header>
-                  <h3>Rocky mountain views</h3>
-                </header>
-                <p>Take in the rocky mountains from water level to skyline.</p>
-              </section>
-            </div>
-            <div class="col-4 col-12-narrower">
-              <section>
-                <img src="images/swim.svg" class="icon featured" alt="" />
-                <header>
-                  <h3>Take the plunge</h3>
-                </header>
-                <p>Jump into the river, or the lake. Climb the ladder to get back on board.</p>
-              </section>
-            </div>
-            <div class="col-4 col-12-narrower">
-              <section>
-                <img src="images/boats.svg" class="icon featured" alt="" />
-                <header>
-                  <h3>One, two, or three boats</h3>
-                </header>
-                <p>Whether you need a solo boat for date night, or three boats for a party, we can make it happen.</p>
-              </section>
-            </div>
-          </div>
-        </section>
       </article>
 
       <!-- CTA -->
