--- a/offerings.html
+++ b/offerings.html
@@ -190,7 +190,7 @@
         </section>
 
         <!-- One -->
-        <section class="wrapper style2 container special-alt">
+        <!-- <section class="wrapper style2 container special-alt">
           <div class="row gtr-50">
             <div class="col-8 col-12-narrower">
               <header>
@@ -210,7 +210,7 @@
               </footer>
             </div>
             <div class="col-4 col-12-narrower imp-narrower">
-              <!-- <ul class="featured-icons">
+              <ul class="featured-icons">
                 <li>
                   <span class="icon fa-clock"><span class="label">Feature 1</span></span>
                 </li>
@@ -229,10 +229,10 @@
                 <li>
                   <span class="icon solid fa-cog"><span class="label">Feature 6</span></span>
                 </li>
-              </ul> -->
+              </ul>
             </div>
           </div>
-        </section>
+        </section> -->
 
         <!-- Two -->
         <section class="wrapper style1 container special">
