--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body class="index is-preload">
     <div id="page-wrapper">
       <header id="header" class="alt">
-        <h1 id="logo"><a href="index.html">Jacuzzi Journeys</a></h1>
+        <h1 id="logo"><a href="index.html">Jacuzzi Journey</a></h1>
         <nav id="nav">
           <ul>
             <li class="submenu">
