--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Jacuzzi Journeys</title>
+    <title>Jacuzzi Journey</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -294,7 +294,7 @@
         </ul> -->
 
         <ul class="copyright">
-          <li>&copy; Jacuzzi Journeys</li>
+          <li>&copy; Jacuzzi Journey</li>
         </ul>
       </footer>
     </div>
