--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <div id="page-wrapper">
       <!-- Header -->
       <header id="header">
-        <h1 id="logo"><a href="index.html">Jacuzzi Journeys</a></h1>
+        <h1 id="logo"><a href="index.html">Jacuzzi Journey</a></h1>
         <nav id="nav">
           <ul>
             <li class="submenu">
@@ -79,7 +79,7 @@
 					</ul> -->
 
         <ul class="copyright">
-          <li>&copy; Jacuzzi Journeys</li>
+          <li>&copy; Jacuzzi Journey</li>
         </ul>
       </footer>
     </div>
