--- a/guided.html
+++ b/guided.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Guided Adventures | Jacuzzi Journeys</title>
+    <title>Guided Adventures | Jacuzzi Journey</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -10,7 +10,7 @@
   <body class="index is-preload">
     <div id="page-wrapper">
       <header id="header" class="alt">
-        <h1 id="logo"><a href="index.html">Jacuzzi Journeys</a></h1>
+        <h1 id="logo"><a href="index.html">Jacuzzi Journey</a></h1>
         <nav id="nav">
           <ul>
             <li class="submenu current">
@@ -253,7 +253,7 @@
         </ul> -->
 
         <ul class="copyright">
-          <li>&copy; Jacuzzi Journeys</li>
+          <li>&copy; Jacuzzi Journey</li>
         </ul>
       </footer>
     </div>
