--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <header>
                   <h3>Rocky mountain views</h3>
                 </header>
-                <p>Take in the rocky mountains from water level to rocky mountain peak.</p>
+                <p>Take in the rocky mountains from water level.</p>
               </section>
             </div>
             <div class="col-4 col-12-narrower">
