--- a/experiences.html
+++ b/experiences.html
@@ -247,8 +247,9 @@
           </li>
         </ul> -->
 
+        <h6><strong>Jacuzzi Journey acknowledges that we are on the land and waters of the Treaty 7 people, past and present.</strong></h6>
         <ul class="copyright">
-          <li>&copy; Jacuzzi Journey</li>
+          <li>&copy;2024 Jacuzzi Journey. All rights reserved.</li>
         </ul>
       </footer>
     </div>
