--- a/offerings.html
+++ b/offerings.html
@@ -316,8 +316,27 @@
 
       <!-- Footer -->
       <footer id="footer">
+        <!-- <ul class="icons">
+          <li>
+            <a href="#" class="icon brands circle fa-twitter"><span class="label">Twitter</span></a>
+          </li>
+          <li>
+            <a href="#" class="icon brands circle fa-facebook-f"><span class="label">Facebook</span></a>
+          </li>
+          <li>
+            <a href="#" class="icon brands circle fa-google-plus-g"><span class="label">Google+</span></a>
+          </li>
+          <li>
+            <a href="#" class="icon brands circle fa-github"><span class="label">Github</span></a>
+          </li>
+          <li>
+            <a href="#" class="icon brands circle fa-dribbble"><span class="label">Dribbble</span></a>
+          </li>
+        </ul> -->
+
+        <h6><strong>Jacuzzi Journey acknowledges that we are on the land and waters of the Treaty 7 people, past and present.</strong></h6>
         <ul class="copyright">
-          <li>&copy; Jacuzzi Journey</li>
+          <li>&copy;2024 Jacuzzi Journey. All rights reserved.</li>
         </ul>
       </footer>
     </div>
